aerc: add gmail account

--- a/dot_config/aerc/private_accounts.conf
+++ b/dot_config/aerc/private_accounts.conf
@@ -1,8 +1,18 @@
-[remo@buenzli.dev]
+[buenzli]
 source            = imaps://mhazyhlu%40mailbox.org@imap.mailbox.org
 outgoing          = smtps://mhazyhlu%40mailbox.org@smtp.mailbox.org
 source-cred-cmd   = op read "op://Personal/Mailbox/passwort"
 outgoing-cred-cmd = op read "op://Personal/Mailbox/passwort"
+default           = INBOX
+from              = Remo Senekowitsch <remo@buenzli.dev>
+copy-to           = Sent
+cache-headers     = true
+
+[gmail]
+source            = imaps://remo.senekowitsch%40gmail.com@imap.gmail.com:993
+outgoing          = smtps+plain://remo.senekowitsch%40gmail.com@smtp.gmail.com:465
+source-cred-cmd   = op read "op://Personal/Google/aerc_app_password"
+outgoing-cred-cmd = op read "op://Personal/Google/aerc_app_password"
 default           = INBOX
 from              = Remo Senekowitsch <remo@buenzli.dev>
 copy-to           = Sent
