--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -7,6 +7,7 @@ bufferline = "multiple"
 mouse = false
 true-color = true
 auto-pairs = false
+end-of-line-diagnostics = "hint"
 
 # TODO: Once there is a stable helix release with inline diagnostics,
 # check if the defaults are good, i.e. this section can be removed.
