hx: format typst with typstyle

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -33,3 +33,8 @@ config.deno.enable = true
 [[language]]
 name = "toml"
 roots = ["."]
+
+[[language]]
+name = "typst"
+auto-format = true
+formatter.command = "typstyle"
