--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -173,7 +173,7 @@ xwayland {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, K, killactive,
+bind = $mainMod, Q, killactive,
 bind = $mainMod CTRL, Q, exit,
 bind = $mainMod, V, togglefloating,
 # bind = $mainMod, P, pseudo, # dwindle (kinda useless?), conflicts with printscreen
