hx: bind reflow to L

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -39,6 +39,7 @@ enable = true
 esc = ":update"                            # save on escape
 C-h = "save_selection"                     # "save" -> "history"
 j = "flip_selections"                      # "juxtapose"
+l = ":reflow"
 h = "jump_backward"                        # move through jumplist ("history")
 H = "jump_forward"                         # move through jumplist ("history")
 q = ":buffer-close"                        # "quit" buffer
