remap k to q in aerc
continuation of 1e6d91b1bb3c51a7cdf328796598bd1ee9bee839

--- a/dot_config/aerc/binds.conf
+++ b/dot_config/aerc/binds.conf
@@ -77,7 +77,7 @@ ps = :patch switch <Tab>
 
 [view]
 / = :toggle-key-passthrough<Enter>/
-k = :close<Enter>
+q = :close<Enter>
 O = :open<Enter>
 o = :open<Enter>
 S = :save<space>
