--- a/dot_config/aerc/binds.conf
+++ b/dot_config/aerc/binds.conf
@@ -45,8 +45,8 @@ zt = :align top<Enter>
 zb = :align bottom<Enter>
 
 <Enter> = :view<Enter>
-d = :choose -o y 'Really delete this message' delete-message<Enter>
-D = :delete<Enter>
+d = :move Trash<Enter>
+D = :choose -o y 'Really delete this message' delete-message<Enter>
 a = :archive flat<Enter>
 A = :unmark -a<Enter>:mark -T<Enter>:archive flat<Enter>
 
