aerc: configure folder map

--- a/dot_config/aerc/private_accounts.conf
+++ b/dot_config/aerc/private_accounts.conf
@@ -17,3 +17,4 @@ default           = INBOX
 from              = Remo Senekowitsch <remo@buenzli.dev>
 copy-to           = Sent
 cache-headers     = true
+folder-map        = ~/.config/aerc/folder_map_gmail.ini
