--- a/dot_config/aerc/binds.conf
+++ b/dot_config/aerc/binds.conf
@@ -49,6 +49,7 @@ d = :move Trash<Enter>
 D = :choose -o y 'Really delete this message' delete-message<Enter>
 a = :archive flat<Enter>
 A = :unmark -a<Enter>:mark -T<Enter>:archive flat<Enter>
+m = :move<Space>
 
 rr  = :reply<Enter>
 rq  = :reply -q<Enter>
