aerc: bind D to move to trash in view mode

--- a/dot_config/aerc/binds.conf
+++ b/dot_config/aerc/binds.conf
@@ -81,7 +81,7 @@ O = :open<Enter>
 o = :open<Enter>
 S = :save<space>
 | = :pipe<space>
-D = :delete<Enter>
+D = :move Trash<Enter>
 A = :archive flat<Enter>
 
 <C-l> = :open-link <space>
