--- a/dot_config/aerc/binds.conf
+++ b/dot_config/aerc/binds.conf
@@ -45,7 +45,7 @@ zt = :align top<Enter>
 zb = :align bottom<Enter>
 
 <Enter> = :view<Enter>
-d = :move Trash<Enter>
+d = :read<Enter>:move Trash<Enter>
 D = :choose -o y 'Really delete this message' delete-message<Enter>
 a = :archive flat<Enter>
 A = :unmark -a<Enter>:mark -T<Enter>:archive flat<Enter>
@@ -81,7 +81,7 @@ O = :open<Enter>
 o = :open<Enter>
 S = :save<space>
 | = :pipe<space>
-D = :move Trash<Enter>
+D = :read<Enter>:move Trash<Enter>
 A = :archive flat<Enter>
 
 <C-l> = :open-link <space>
