--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -31,6 +31,7 @@
 [rebase]
 	autoSquash = true
 	autoStash = true
+	rebaseMerges = true # == no-rebase-cousins
 	updateRefs = true
 [rerere]
 	enabled = true
