hyprland: use zellij in scratch terminals
Hopefully it shouldn't pose any problems now that I'm not using a
plugin for the status bar anymore (which was buggy). I can always launch
a regular terminal without zellij normally. It happens kinda often to me
that I open a scratch terminal and then regret not being in zellij.

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ exec-once = hyprpm reload --notify
 exec-once = 1password --silent
 exec-once = syncthing serve --no-browser --logfile=default --no-default-folder
 
-$terminal = alacritty
+$terminal = alacritty --command zellij
 $fileManager = nautilus
 $menu = wofi --show drun
 
