ide: hide zellij status bar on helix tab
I got rid of my custom themed status bar. While the kanagawa theme is
nice, it's a little to bright and attention-attracting for focused code
editing.

Also, always display the bufferline in helix for more consistent UI.

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -3,7 +3,7 @@ theme = "kanagawa"
 [editor]
 scrolloff = 256                  # big number -> cursor always centered
 line-number = "absolute"
-bufferline = "multiple"
+bufferline = "always"
 mouse = false
 true-color = true
 auto-pairs = false
