1password: replace autostart with systemd service

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -20,8 +20,8 @@ exec-once = dunst
 # exec-once = wlsunset -t 3000
 exec-once = hyprpm reload --notify
 
-# TODO better way to reuse .config/autostart
-exec-once = 1password --silent
+# TODO: migrate this to a systemd user service, which not only unifies the
+# .local/../autostart approach but should also work the same way on the server
 exec-once = syncthing serve --no-browser --logfile=default --no-default-folder
 
 $terminal = alacritty --command fish -c zellij
