--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -38,3 +38,8 @@ roots = ["."]
 name = "typst"
 auto-format = true
 formatter.command = "typstyle"
+
+[[language]]
+name = "just"
+formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
+auto-format = true
