--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -43,3 +43,7 @@ formatter.command = "typstyle"
 name = "just"
 formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
 auto-format = true
+
+[[language]]
+name = "bash"
+indent = { unit = "    ", tab-width = 4 }
