--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -47,3 +47,5 @@ auto-format = true
 [[language]]
 name = "bash"
 indent = { unit = "    ", tab-width = 4 }
+formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
+auto-format = true
