--- a/dot_config/aerc/binds.conf
+++ b/dot_config/aerc/binds.conf
@@ -14,10 +14,10 @@ q      = :prompt 'Quit?' quit<Enter>
 q = :quit<Enter>
 
 <Down> = :next<Enter>
-<C-d>  = :next 50%<Enter>
+d  = :next 50%<Enter>
 <PgDn> = :next 100%<Enter>
 <Up>   = :prev<Enter>
-<C-u>  = :prev 50%<Enter>
+u  = :prev 50%<Enter>
 <PgUp> = :prev 100%<Enter>
 
 gg = :select 0<Enter>
@@ -45,8 +45,7 @@ zt = :align top<Enter>
 zb = :align bottom<Enter>
 
 <Enter> = :view<Enter>
-d = :read<Enter>:move Trash<Enter>
-D = :choose -o y 'Really delete this message' delete-message<Enter>
+D = :read<Enter>:move Trash<Enter>
 a = :archive flat<Enter>
 A = :unmark -a<Enter>:mark -T<Enter>:archive flat<Enter>
 m = :move<Space>
