hx: map shift+q to force quit buffer
This is more consistent with space+q/Q and I don't use quit-others
enough for this keybind to be necessary.

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -43,7 +43,7 @@ l = ":reflow"
 h = "jump_backward"                        # move through jumplist ("history")
 H = "jump_forward"                         # move through jumplist ("history")
 q = ":buffer-close"                        # "quit" buffer
-Q = ":buffer-close-others"                 # "quit" buffer
+Q = ":buffer-close!"                       # force "quit" buffer
 k = "replay_macro"
 K = "record_macro"
 X = "select_line_above"                    # instead of extend_to_line_bounds
