--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "kanagawa" # modus_operandi
+theme = "kanagawa_deluxe" # modus_operandi
 
 [editor]
 scrolloff = 256                  # big number -> cursor always centered
