--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -2,8 +2,12 @@
 config.cargo.targetDir = true
 config.check.command = "clippy"
 
+[[language]]
+name = "python"
+auto-format = true
+
 [language-server.pylsp.config.pylsp.plugins]
-pycodestyle.maxLineLength = 240
+pycodestyle.enabled = false # don't need style diagnostics with auto-format
 mccabe.enabled = false # cyclomatic complexity
 # more pylsp config options:
 # https://github.com/python-lsp/python-lsp-server/blob/develop/CONFIGURATION.md
