aerc: enable use of any alias with custom domain

--- a/dot_config/aerc/private_accounts.conf
+++ b/dot_config/aerc/private_accounts.conf
@@ -7,6 +7,7 @@ default           = INBOX
 from              = Remo Senekowitsch <remo@buenzli.dev>
 copy-to           = Sent
 cache-headers     = true
+aliases           = Remo Senekowitsch <*@buenzli.dev>
 
 [gmail]
 source            = imaps://remo.senekowitsch%40gmail.com@imap.gmail.com:993
@@ -14,6 +15,6 @@ outgoing          = smtps+plain://remo.senekowitsch%40gmail.com@smtp.gmail.com:4
 source-cred-cmd   = op read "op://Personal/Google/aerc_app_password"
 outgoing-cred-cmd = op read "op://Personal/Google/aerc_app_password"
 default           = INBOX
-from              = Remo Senekowitsch <remo@buenzli.dev>
+from              = Remo Senekowitsch <remo.senekowitsch@gmail.com>
 cache-headers     = true
 folder-map        = ~/.config/aerc/folder_map_gmail.ini
