aerc: enable notifications

--- a/dot_config/aerc/aerc.conf
+++ b/dot_config/aerc/aerc.conf
@@ -802,7 +802,7 @@ message/rfc822=colorize
 
 #
 # Executed when a new email arrives in the selected folder
-#mail-received=notify-send "[$AERC_ACCOUNT/$AERC_FOLDER] New mail from $AERC_FROM_NAME" "$AERC_SUBJECT"
+mail-received=notify-send "[$AERC_ACCOUNT] New mail from $AERC_FROM_NAME" "$AERC_SUBJECT"
 
 #
 # Executed when mail is deleted from a folder
