--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -40,6 +40,7 @@ esc = ":update"                            # save on escape
 C-h = "save_selection"                     # "save" -> "history"
 j = "flip_selections"                      # "juxtapose"
 l = ":reflow"
+L = ":reload-all"
 h = "jump_backward"                        # move through jumplist ("history")
 H = "jump_forward"                         # move through jumplist ("history")
 q = ":buffer-close"                        # "quit" buffer
