--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec-once = syncthing serve --no-browser --logfile=default --no-default-folder
 
 $terminal = alacritty --command fish -c zellij
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = fuzzel
 
 # We need to start _some_ app in the foreground to signal that the system has
 # booted... because the wallpaper is black.
@@ -183,7 +183,7 @@ bind = $mainMod, A, exec, $menu
 bind = $mainMod CTRL, S, exec, [workspace +0; float] $terminal
 bind = $mainMod, O, exec, fish -c rotate_monitor.sh # orientation
 bind = $mainMod, U, exec, systemctl suspend # "usleep"
-bind = $mainMod, Y, exec, fish -c wofi_emoji.sh
+bind = $mainMod, Y, exec, fish -c fuzzel_emoji.sh
 
 # would prefer screenshots dir to be be lowercase, but need Gnome compat for now
 # file format is duplicated in swappy config
