alacritty: switch to adwaita mono font
Also revert some jj node styles to the default. The defaults look way
better with Adwaita Mono than Roboto Mono.

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -10,7 +10,7 @@ live_config_reload = true
 # draw_bold_text_with_bright_colors = true
 
 [font.normal]
-family = "Roboto Mono"
+family = "Adwaita Mono"
 
 [window]
 decorations = "none"
