waybar: remove backlight widget

--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -17,8 +17,8 @@
         "tray",
         "pulseaudio",
         "network",
-        "power-profiles-daemon",
-        "backlight"
+        "power-profiles-daemon"
+        // "backlight",
         // "idle_inhibitor",
         // "cpu",
         // "memory",
