--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -40,13 +40,13 @@ roots = ["."]
 
 [[language]]
 name = "just"
-formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
+formatter = { command = "sed", args = ["s/[[:space:]]\\+$//"] }
 auto-format = true
 
 [[language]]
 name = "bash"
 indent = { unit = "    ", tab-width = 4 }
-formatter = { command = "ec2hx", args = ["trim-trailing-whitespace"] }
+formatter = { command = "sed", args = ["s/[[:space:]]\\+$//"] }
 auto-format = true
 
 [[language]]
