waybar: add logout button

--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -137,6 +137,7 @@
         "menu-file": "$HOME/.config/waybar/power_menu.xml",
         "menu-actions": {
             "suspend": "systemctl suspend",
+            "logout": "niri msg action quit --skip-confirmation",
             "poweroff": "systemctl poweroff",
             "reboot": "systemctl reboot",
         },
