turn off screen after locking
The wallpaper is nice, but this saves power and prevents burn-in.

--- a/dot_config/swayidle/config
+++ b/dot_config/swayidle/config
@@ -1,4 +1,4 @@
 before-sleep swaylock
-lock swaylock
+lock "swaylock ; sleep 5 ; niri msg action power-off-monitors"
 timeout 6600 "notify-send 'Are you still there?' 'The monitors will be turned off in 10 minutes.'"
 timeout 7200 "niri msg action power-off-monitors"
