--- a/dot_config/systemd/user/waybar.service
+++ b/dot_config/systemd/user/waybar.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Highly customizable Wayland bar
+BindsTo=graphical-session.target
+After=graphical-session.target
 
 [Service]
 ExecStart=/usr/bin/waybar
