1password: switch to wayland
Note: rich authentication prompt is currently broken. Disable under
Settings > Developer.

--- a/dot_config/systemd/user/1password.service
+++ b/dot_config/systemd/user/1password.service
@@ -5,5 +5,6 @@ After=xwayland-satellite.service
 
 [Service]
 Environment=DISPLAY=:0
+Environment=ELECTRON_OZONE_PLATFORM_HINT=auto
 ExecStart=/opt/1Password/1password --silent %U
 Restart=always
