hx: remove ruler at 51 columns for commit messages
I have decided to shake off the mental shakles of those who came before
me and write subject lines with up to 72 characters.

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -56,3 +56,11 @@ text-width = 72
 [[language]]
 name = "openscad"
 auto-format = true
+
+[[language]]
+name = "git-commit"
+rulers = [73]
+
+[[language]]
+name = "jjdescription"
+rulers = [73]
