--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -64,3 +64,15 @@ rulers = [73]
 [[language]]
 name = "jjdescription"
 rulers = [73]
+
+[language-server.harper-ls]
+command = "harper-ls"
+args = ["--stdio"]
+
+[[language]]
+name = "markdown"
+language-servers = ["marksman", "markdown-oxide", "harper-ls"]
+
+[[language]]
+name = "typst"
+language-servers = ["tinymist", "harper-ls"]
