--- a/dot_config/systemd/user/xwayland-satellite.service
+++ b/dot_config/systemd/user/xwayland-satellite.service
@@ -4,5 +4,6 @@ BindsTo=graphical-session.target
 After=graphical-session.target
 
 [Service]
+ExecStartPre=sleep 1
 ExecStart=%h/.cargo/bin/xwayland-satellite
 Restart=always
