--- a/dot_config/systemd/user/1password.service
+++ b/dot_config/systemd/user/1password.service
@@ -1,10 +1,9 @@
 [Unit]
 Description=Password manager and secure wallet
-BindsTo=xwayland-satellite.service
-After=xwayland-satellite.service
+BindsTo=graphical-session.target
+After=graphical-session.target
 
 [Service]
-Environment=DISPLAY=:0
 Environment=ELECTRON_OZONE_PLATFORM_HINT=auto
 ExecStart=/opt/1Password/1password --silent %U
 Restart=always
