--- a/dot_config/systemd/user/1password.service
+++ b/dot_config/systemd/user/1password.service
@@ -5,5 +5,7 @@ After=graphical-session.target
 
 [Service]
 Environment=ELECTRON_OZONE_PLATFORM_HINT=auto
-ExecStart=/opt/1Password/1password --silent %U
+# TODO: make silent again once rich approval prompt works on wayland
+# ExecStart=/opt/1Password/1password --silent %U
+ExecStart=/opt/1Password/1password %U
 Restart=always
