--- a/dot_cargo/config.toml
+++ b/dot_cargo/config.toml
@@ -3,11 +3,19 @@ nt = "nextest run --final-status-level slow"
 gen = "generate"
 
 [registry]
-global-credential-providers = ["cargo:token-from-stdout op read op://Personal/ncskkq6uqseteemqviapuisrbe/token"]
+global-credential-providers = [
+  "cargo:token-from-stdout op read op://Personal/ncskkq6uqseteemqviapuisrbe/token",
+]
 
 [registries.buenzli-dev]
 # index = "sparse+https://git.buenzli.dev/api/packages/remo/cargo/"
-credential-provider = ["cargo:token-from-stdout", "bash", "-c", """
+credential-provider = [
+  "cargo:token-from-stdout",
+  "bash",
+  "-c",
+  """
 printf "token "
 op read op://Personal/o7n5djqeb347qarbqx3x2l7z7m/token
-"""]
+""",
+]
+
