--- a/dot_config/alacritty/themes/vscode.toml
+++ b/dot_config/alacritty/themes/vscode.toml
@@ -9,7 +9,7 @@ black = "#000000"
 blue = "#2472c8"
 cyan = "#11a8cd"
 # green = "#0dbc79"
-green   = '#22c55e' # tailwind green-500
+green = "#22c55e"  # tailwind green-500
 magenta = "#bc3fbc"
 red = "#cd3131"
 white = "#e5e5e5"
@@ -20,7 +20,7 @@ black = "#666666"
 blue = "#3b8eea"
 cyan = "#29b8db"
 # green = "#23d18b"
-green   = '#4ade80' # tailwind green-400
+green = "#4ade80"  # tailwind green-400
 magenta = "#d670d6"
 red = "#f14c4c"
 white = "#e5e5e5"
