--- a/dot_config/helix/runtime/themes/kanagawa_deluxe.toml
+++ b/dot_config/helix/runtime/themes/kanagawa_deluxe.toml
@@ -1,4 +1,3 @@
 inherits = "kanagawa"
-
-# gutter background same regular background, make it "invisible"
+# gutter background same as regular background, make it "invisible"
 "ui.gutter" = { bg = "sumiInk3" }
