1password: make service silent on startup
The rich approval prompt seems to have been fixed on wayland.

--- a/dot_config/systemd/user/1password.service
+++ b/dot_config/systemd/user/1password.service
@@ -5,7 +5,5 @@ After=graphical-session.target
 
 [Service]
 Environment=ELECTRON_OZONE_PLATFORM_HINT=auto
-# TODO: make silent again once rich approval prompt works on wayland
-# ExecStart=/opt/1Password/1password --silent %U
-ExecStart=/opt/1Password/1password %U
+ExecStart=/opt/1Password/1password --silent %U
 Restart=always
