--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -11,6 +11,7 @@ end-of-line-diagnostics = "hint"
 
 [editor.inline-diagnostics]
 cursor-line = "info"  # error, warning, info, hint
+max-diagnostics = 3
 
 [editor.cursor-shape]
 insert = "bar"
