improve theme switching
* simplify script
* use ansi theme for bat, then theme switching is covered by alacritty
* remove btop config, is auto-generated (and managed) anyway
* remove unused alacritty themes

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "kanagawa_deluxe"  # modus_operandi
+theme = "kanagawa_deluxe"
 
 [editor]
 scrolloff = 256  # big number -> cursor always centered
