add typos-lsp setup

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -46,6 +46,10 @@ rulers = [73]
 name = "jjdescription"
 rulers = [73]
 
+[[language]]
+name = "typst"
+language-servers = ["tinymist", "typos"]
+
 # -------- language servers -------- #
 
 [language-server.rust-analyzer]
@@ -62,3 +66,6 @@ args = ["lsp"]
 command = "deno"
 args = ["lsp"]
 config.deno.enable = true
+
+[language-server.typos]
+command = "typos-lsp"
