rustfmt: use "item" as imports granularity
It's the better default, because it reduces the complexity of merge
conflicts. (Mergiraf can help, but why make life harder on yourself and
other people.) Motivated by an email from Linus on the LKML where he
complained about auto-formatting of import statements:

https://lore.kernel.org/lkml/CAHk-=wgO7S_FZUSBbngG5vtejWOpzDfTTBkVvP3_yjJmFddbzA@mail.gmail.com/T/#me533a148abe97c29e0e7150508c42345b2a64e13

--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -51,6 +51,8 @@ rulers = [73]
 [language-server.rust-analyzer]
 config.cargo.targetDir = true
 config.check.command = "clippy"
+config.imports.granularity.group = "item"
+config.rustfmt.extraArgs = ["+nightly"]
 
 [language-server.pyrefly]
 command = "pyrefly"
