--- a/dot_config/jj/config.toml
+++ b/dot_config/jj/config.toml
@@ -28,6 +28,9 @@ default-command = ["log", "--template", "custom_log_oneline"]
 diff-editor = ":builtin"  # suppress hint about this config option
 # show-cryptographic-signatures = true # sometimes very slow for unknown signatures
 
+[fix.tools]
+rustfmt = { command = ["rustfmt", "+nightly", "--edition=2024"], patterns = ["glob:**/*.rs"] }
+
 [aliases]
 b  = ["bookmark"]
 bc = ["bookmark", "create"]
